--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Koenig Lexical Demo</title>
-    <script type="module" crossorigin src="/Koenig/koenig-lexical-demo/assets/main.db193aee.js"></script>
-    <link rel="stylesheet" href="/Koenig/koenig-lexical-demo/assets/index.2c8118ec.css">
+    <script type="module" crossorigin src="/Koenig/assets/main.db193aee.js"></script>
+    <link rel="stylesheet" href="/Koenig/assets/index.2c8118ec.css">
   </head>
   <body>
     <div id="root"></div>
